# ros-demo

./: CMakeLists.txt  README.md  package.xml
launch/: publisher.launch  subscriber.launch
src/: Publisher.cpp  Subscriber.cpp
src/tests/unittests/: CMakeLists.txt  test_publisher.cpp  test_subscribers_subscriptions.py
test/testDataScripts/: CreatePathTestData.py  shape1_rectangle.yaml  shape2.yaml
test/testDataScripts/data/: shape3.yaml
test/unit_test/: CMakeLists.txt  test_subscriber.cpp  test_subscriber.test
